# RCli

./: .gitignore  Cargo.toml  Notes.md  function_schematics.txt  notes.tx  piping_schemantics.txt  readme.md  todo
src/: arg-demo.rs  grammar.bnf  lexer.rs  look_tables.rs  main.rs  token.rs  tokenizer.rs
src/RCLParser/RCLInputReader/: input_reader.rs
src/rclilogger/: logger.rs
src/rcliparser/: grammar.json  input_reader.rs  invoker.rs  lexical_analyzer.rs  mod.rs  models.json  parser.rs
src/rcliparser/inputreader/: input_reader.rs
src/rcliparser/lexer/: lexical_analyzer.rs  tokenizer.rs
src/rcliparser/objects/: bnf_commands.rs  data_types.rs  grammar_objects.rs  token_objects.rs  tokens.rs  user_input.rs
src/rcliparser/parser/: parser.rs
src/rcliparser/utils/: bnf_grammar.json  bsftree.rs  command_syntax.json  dotparser.rs  functions.rs  grammar.json  grammar_reader.rs  windows_file_attributes.rs
src/rcliparser/utils/windows/: windows_file_attributes.rs
src/rclishell/: shell.rs
src/rcliterminal/: mod.rs  terminal.rs  terminal_singlenton.rs
src/structures/: look_tables.rs  mod.rs  token.rs
src/structures/ast/: abstract_tree.rs  mod.rs
src/structures/commands/: command.rs  flag.rs  mod.rs  status.rs
