[package]
name = "RCli"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26.1"                                      #Fabulous terminal
serde = { version = "1.0", features = ["derive"] }      #crate for json serialize, desirialize
serde_json = "1.0"                                      #crate for json reading
regex = "1.10.4"                                        #crate for object/flag matching
dirs = "5.0.1"                                          #crate to locate home dir
