[package]
name = "RCli"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }      #crate for json serialize, desirialize
serde_json = "1.0"                                      #crate for json reading
regex = "1.10.4"                                        #crate for object/flag matching
